cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Allowed_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Types__c</fullName>
    <defaultValue>&quot;.pdf,.jpg,.jpeg,.png&quot;</defaultValue>
    <description>Comma-separated list of allowed file types</description>
    <inlineHelpText>Comma-separated list of allowed file types</inlineHelpText>
    <label>Allowed Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>