cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Associated_Checkbox_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Checkbox_Field_API_Name__c</fullName>
    <description>If not blank, the associated checkbox on the file&apos;s parent record will be ticked upon file upload</description>
    <inlineHelpText>If not blank, the associated checkbox on the file&apos;s parent record will be ticked upon file upload</inlineHelpText>
    <label>Associated Checkbox Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>