cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Auto_Purge_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Auto_Purge_in_Months__c</fullName>
    <label>Auto-Purge in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>