cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>File upload components are displayed in ascending order, eg. 1 will be displayed before 2</description>
    <inlineHelpText>File upload components are displayed in ascending order, eg. 1 will be displayed before 2</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>