cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>