cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Document_Name_for_Small_Screens__c.field-meta.xml
<CustomField>
    <fullName>Document_Name_for_Small_Screens__c</fullName>
    <label>Document Name for Small Screens</label>
    <length>80</length>
    <type>Text</type>
</CustomField>