cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Max_Files__c.field-meta.xml
<CustomField>
    <fullName>Max_Files__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Controls the maximum number of files each upload component accepts</description>
    <inlineHelpText>Controls the maximum number of files each upload component accepts</inlineHelpText>
    <label>Max Files</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>