cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>Naming_Convention__c</fullName>
    <description>Defines the name of the uploaded file. If the placeholder &quot;{RecordName}&quot; is used, &quot;{RecordName}&quot; will be replaced by the name of the file&apos;s parent record.</description>
    <inlineHelpText>Defines the name of the uploaded file. If the placeholder &quot;{RecordName}&quot; is used, &quot;{RecordName}&quot; will be replaced by the name of the file&apos;s parent record.</inlineHelpText>
    <label>Naming Convention</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>