cncProd/force-app/main/default/objects/File_Requirements__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Files in the same section shall be grouped together</description>
    <inlineHelpText>Files in the same section shall be grouped together</inlineHelpText>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>